# rdm_x

./: .gitignore  CMakeLists.txt
docs/: 434B_PIDs.csv  CK_Vaya_RDM_map.csv  CK_Vaya_RDM_map_v0_5FEB2026.xlsx  CK_Vaya_RDM_map_v1_5MAR2026.xlsx  PIDAttributes.csv  Vaya_RDM_map.csv
docs/peperoni/: RDMComs.h  VariLite.cpp  VariLite.h  VariLite.vcxproj  VariLite.vcxproj.filters  device_ctl.cpp  device_ctl.h  dllmain.cpp  vusbdmx.h  vusbdmx.lib  vusbdmx64.lib
installer/: RDM_X_Setup.iss  build_installer.ps1
src/: enttec_pro.cpp  enttec_pro.h  main.cpp  parameter_loader.cpp  parameter_loader.h  peperoni_rodin.cpp  peperoni_rodin.h  rdm.cpp  rdm.h  rdm_x_api.cpp  rdm_x_api.h  validator.cpp  validator.h
tests/cpp/: CMakeLists.txt  test_parameter_loader.cpp  test_rdm_core.cpp
tests/cs/RDM_X.Tests/: ConverterTests.cs  RDM_X.Tests.csproj
wpf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeInterop.cs  RDM_X.App.csproj
wpf/Converters/: Converters.cs
wpf/Themes/: DarkTheme.xaml
wpf/ViewModels/: MainViewModel.cs
